Add link to example meshes

--- a/index.ipynb
+++ b/index.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "Displaying relies on the numpy-stl and the ipyvolume libraries.\n",
     "\n",
-    "Upload an STL **ascii** file (*binary files not supported*)"
+    "Upload an STL **ascii** file (*binary files not supported*)\n",
+    "\n",
+    "There are some example files you can upload in the [GitHub repository](https://github.com/voila-gallery/render-stl/tree/master/example-stl-meshes)."
    ]
   },
   {
