--- a/index.ipynb
+++ b/index.ipynb
@@ -17,24 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9206b73fb38b4ec58d9d944ad37a274b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(FileUpload(accept='*.stl'), Text(value=''))), ColorPicker(value='white', descrip…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# imports\n",
     "from stl import mesh\n",
@@ -42,11 +27,10 @@
     "import ipyvolume as ipv\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
-    "from ipyupload import FileUpload\n",
     "from io import StringIO\n",
     "\n",
     "# widgets\n",
-    "file_picker = FileUpload(accept='*.stl')\n",
+    "file_picker = widgets.FileUpload(accept='*.stl')\n",
     "file_name = widgets.Text()\n",
     "wireframe_flag = widgets.Checkbox(\n",
     "            value=False,\n",
@@ -111,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
