Fix triangle indices and use plot_trisurf instead
Signed-off-by: martinRenou <martin.renou@gmail.com>

--- a/index.ipynb
+++ b/index.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
+    "import numpy as np\n",
     "from stl import mesh\n",
     "from traitlets import dlink\n",
     "import ipyvolume as ipv\n",
@@ -32,19 +32,15 @@
     "# widgets\n",
     "file_picker = widgets.FileUpload(accept='*.stl')\n",
     "file_name = widgets.Text()\n",
-    "wireframe_flag = widgets.Checkbox(\n",
-    "            value=False,\n",
-    "            description='Wireframe',\n",
-    "            disabled=False)\n",
     "color_picker = widgets.ColorPicker(\n",
     "            concise=False,\n",
     "            description='Pick a color',\n",
     "            value='white',\n",
     "            disabled=False)\n",
-    "vbox = widgets.VBox([widgets.HBox([file_picker, file_name]), color_picker, wireframe_flag])\n",
+    "vbox = widgets.VBox([widgets.HBox([file_picker, file_name]), color_picker])\n",
     "\n",
     "# display STL file\n",
-    "def show_stl(file_content, wireframe, color):\n",
+    "def show_stl(file_content, color):\n",
     "    # bridge: FileUpload - stl.mesh\n",
     "    content = next(iter(file_content.values()))['content']\n",
     "    io = StringIO()\n",
@@ -52,10 +48,10 @@
     "    io.seek(0)\n",
     "    name, data = mesh.Mesh.load(io)\n",
     "    m = mesh.Mesh(data, True, name=name, speedups=True)\n",
-    "    \n",
+    "\n",
     "    ipv.figure()\n",
     "    ipv.style.use('minimal')\n",
-    "    m2 = ipv.plot_mesh(m.x, m.z, m.y, color=color, wireframe=wireframe)\n",
+    "    m2 = ipv.plot_trisurf(m.x.flatten(), m.z.flatten(), m.y.flatten(), triangles=np.arange(m.x.shape[0] * 3).reshape((m.x.shape[0], 3)), color=color)\n",
     "    return ipv.gcc()\n",
     "\n",
     "# get filename from FileUpload dict\n",
@@ -65,14 +61,13 @@
     "    return next(iter(file_upload.values()))['metadata']['name']\n",
     "\n",
     "def change_input(change):\n",
-    "    global vbox, file_picker, file_name, wireframe_flag, color_picker\n",
-    "    mymesh = show_stl(file_picker.value, wireframe_flag.value, color_picker.value)\n",
-    "    vbox.children = (widgets.HBox([file_picker, file_name]), wireframe_flag, color_picker, mymesh)\n",
+    "    global vbox, file_picker, file_name, color_picker\n",
+    "    mymesh = show_stl(file_picker.value, color_picker.value)\n",
+    "    vbox.children = (widgets.HBox([file_picker, file_name]), color_picker, mymesh)\n",
     "\n",
     "# links between widgets\n",
     "color_picker.observe(change_input, 'value')\n",
     "dlink((file_picker, 'value'), (file_name, 'value'), get_name)\n",
-    "wireframe_flag.observe(change_input, 'value')\n",
     "file_picker.observe(change_input, 'value')\n",
     "\n",
     "vbox"
@@ -95,7 +90,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
